added autoprefixer, vminpoly, fixed errors

--- a/craft/templates/partials/_contact.html
+++ b/craft/templates/partials/_contact.html
@@ -1,4 +1,4 @@
-<div class="component__contact">
+<div id="contact-box" class="component__contact">
     <h2>Quick Contact</h2>
     <label for=""></label>
     <input type="text" placeholder="First Name">
