--- a/craft/templates/partials/_header.html
+++ b/craft/templates/partials/_header.html
@@ -15,6 +15,11 @@
                   {{ each.getLink() }}
                 </li>
               {% endnav %}
+              <li class="nav__list">
+                <a href="#contact-box">
+                  Contact
+                </a>
+              </li>
           </ul>
       </nav>
     </div>
