--- a/resources/sass/style.css
+++ b/resources/sass/style.css
@@ -1047,7 +1047,7 @@ label[role="menu-toggle"] i {
   margin: 0;
   flex-flow: column wrap;
   justify-content: space-between;
-  align-content: center;
+  align-items: center;
   padding: 0; }
   @media screen and (min-width: 768px) {
     /* line 103, ui/_header.sass */
@@ -1058,32 +1058,34 @@ label[role="menu-toggle"] i {
     .nav__menu {
       padding-top: 3rem;
       align-content: stretch;
-      width: 100vw; } }
+      width: 100vw;
+      flex-direction: column; } }
 
-/* line 125, ui/_header.sass */
+/* line 126, ui/_header.sass */
 .nav__list {
   font-size: 2rem; }
   @media screen and (min-width: 0px) and (max-width: 768px) {
-    /* line 125, ui/_header.sass */
+    /* line 126, ui/_header.sass */
     .nav__list {
       padding: 1.5rem 0rem 3rem 4rem;
       height: 6rem;
+      width: 100%;
       border-bottom-style: solid;
       border-bottom-width: 1px; }
-      /* line 137, ui/_header.sass */
+      /* line 139, ui/_header.sass */
       .nav__list a {
         border: none !important;
         padding: none !important; } }
-  /* line 141, ui/_header.sass */
+  /* line 143, ui/_header.sass */
   .nav__list a {
     border-left-width: 0.1rem;
     border-left-style: solid;
     padding-left: 1.9vw; }
-  /* line 152, ui/_header.sass */
+  /* line 154, ui/_header.sass */
   .nav__list:first-child a {
     border: none; }
 
-/* line 155, ui/_header.sass */
+/* line 157, ui/_header.sass */
 .header__social {
   display: none;
   position: absolute; }
@@ -1149,7 +1151,7 @@ label[role="menu-toggle"] i {
   .footer__menu, .footer__services {
     border-left-width: 1px;
     border-left-style: solid;
-    padding-left: 1.6rem; } }
+    padding-left: 0.5rem; } }
 
 @media screen and (min-width: 768px) {
   /* line 57, ui/_footer.sass */
@@ -1171,12 +1173,22 @@ label[role="menu-toggle"] i {
       float: left;
       display: block;
       margin-right: 2.35765%;
+      width: 31.76157%; }
+      /* line 40, neat/grid/_span-columns.scss */
+      .footer__hours-box:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 900px) {
+    /* line 63, ui/_footer.sass */
+    .footer__hours-box {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
       width: 23.23176%; }
       /* line 40, neat/grid/_span-columns.scss */
       .footer__hours-box:last-child {
         margin-right: 0; } }
 
-/* line 71, ui/_footer.sass */
+/* line 73, ui/_footer.sass */
 .footer__location-box {
   float: left;
   display: block;
@@ -1186,7 +1198,7 @@ label[role="menu-toggle"] i {
   .footer__location-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 71, ui/_footer.sass */
+    /* line 73, ui/_footer.sass */
     .footer__location-box {
       float: left;
       display: block;
@@ -1196,7 +1208,7 @@ label[role="menu-toggle"] i {
       .footer__location-box:last-child {
         margin-right: 0; } }
 
-/* line 80, ui/_footer.sass */
+/* line 82, ui/_footer.sass */
 .footer__info-box {
   float: left;
   display: block;
@@ -1206,7 +1218,17 @@ label[role="menu-toggle"] i {
   .footer__info-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 80, ui/_footer.sass */
+    /* line 82, ui/_footer.sass */
+    .footer__info-box {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 23.23176%; }
+      /* line 40, neat/grid/_span-columns.scss */
+      .footer__info-box:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 900px) {
+    /* line 82, ui/_footer.sass */
     .footer__info-box {
       float: left;
       display: block;
@@ -1216,15 +1238,15 @@ label[role="menu-toggle"] i {
       .footer__info-box:last-child {
         margin-right: 0; } }
 
-/* line 86, ui/_footer.sass */
+/* line 90, ui/_footer.sass */
 .footer__info ul {
   padding: 0; }
 
-/* line 93, ui/_footer.sass */
+/* line 97, ui/_footer.sass */
 .legal__item {
   display: block; }
 
-/* line 96, ui/_footer.sass */
+/* line 100, ui/_footer.sass */
 .info__social-box {
   *zoom: 1;
   display: block; }
@@ -1236,7 +1258,7 @@ label[role="menu-toggle"] i {
   .info__social-box:after {
     clear: both; }
 
-/* line 99, ui/_footer.sass */
+/* line 103, ui/_footer.sass */
 .info__social {
   float: left;
   display: block;
@@ -1246,7 +1268,17 @@ label[role="menu-toggle"] i {
   .info__social:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 99, ui/_footer.sass */
+    /* line 103, ui/_footer.sass */
+    .info__social {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 100%; }
+      /* line 40, neat/grid/_span-columns.scss */
+      .info__social:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 900px) {
+    /* line 103, ui/_footer.sass */
     .info__social {
       float: left;
       display: block;
@@ -1255,11 +1287,12 @@ label[role="menu-toggle"] i {
       /* line 40, neat/grid/_span-columns.scss */
       .info__social:last-child {
         margin-right: 0; } }
-  /* line 104, ui/_footer.sass */
-  .info__social ul {
-    padding-right: 0.5rem; }
+  @media screen and (min-width: 900px) {
+    /* line 110, ui/_footer.sass */
+    .info__social ul {
+      padding-right: 0.5rem; } }
 
-/* line 121, ui/_footer.sass */
+/* line 129, ui/_footer.sass */
 .info__logo-box {
   float: left;
   display: block;
@@ -1269,17 +1302,17 @@ label[role="menu-toggle"] i {
   .info__logo-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 121, ui/_footer.sass */
+    /* line 129, ui/_footer.sass */
     .info__logo-box {
       float: left;
       display: block;
       margin-right: 2.35765%;
-      width: 14.70196%; }
+      width: 100%; }
       /* line 40, neat/grid/_span-columns.scss */
       .info__logo-box:last-child {
         margin-right: 0; } }
-  @media screen and (min-width: 768px) {
-    /* line 121, ui/_footer.sass */
+  @media screen and (min-width: 900px) {
+    /* line 129, ui/_footer.sass */
     .info__logo-box {
       float: left;
       display: block;
@@ -1289,17 +1322,22 @@ label[role="menu-toggle"] i {
       .info__logo-box:last-child {
         margin-right: 0; } }
 
-/* line 128, ui/_footer.sass */
+/* line 136, ui/_footer.sass */
 .info__logo {
   height: 8.8rem;
   width: 8.8rem;
   margin: 0 auto; }
   @media screen and (min-width: 768px) {
-    /* line 128, ui/_footer.sass */
+    /* line 136, ui/_footer.sass */
     .info__logo {
       height: 5.5rem;
       width: 5.5rem;
-      display: inline-block; } }
+      display: inline-block;
+      float: right; } }
+  @media screen and (min-width: 900px) {
+    /* line 136, ui/_footer.sass */
+    .info__logo {
+      float: left; } }
 
 /* line 7, ui/_aside.sass */
 .moreinfo__promo, .moreinfo__tour {
@@ -1926,6 +1964,23 @@ label[role="menu-toggle"] i {
 /* line 55, ui/_merch--search.sass */
 .mSearch__filter-list .selected li {
   border-color: rgba(0, 0, 0, 0.2); }
+
+/* line 1, ui/_onLoad.sass */
+body {
+  -webkit-transition: opacity 1s ease-in 0s;
+  -moz-transition: opacity 1s ease-in 0s;
+  transition: opacity 1s ease-in 0s;
+  opacity: 0; }
+  /* line 4, ui/_onLoad.sass */
+  body.isNotHome {
+    opacity: 1; }
+
+/* line 8, ui/_onLoad.sass */
+.onLoad body {
+  -webkit-transition: opacity 1s ease-in 0s;
+  -moz-transition: opacity 1s ease-in 0s;
+  transition: opacity 1s ease-in 0s;
+  opacity: 1; }
 
 /* line 11, plugins/traffic-light.scss */
 .traffic-light {
