--- a/craft/templates/_layout--main.html
+++ b/craft/templates/_layout--main.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="{{ craft.config.environmentVariables.siteUrl }}/resources/style-compiled.css">
 
     </head>
-    <body>
+    <body class="{% set path = craft.request.getPath %}{% if path != "" %} isNotHome {% endif %}">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
