--- a/resources/sass/style-prefixed.css
+++ b/resources/sass/style-prefixed.css
@@ -1055,9 +1055,10 @@ label[role="menu-toggle"] i {
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  -webkit-align-content: center;
-  -ms-flex-line-pack: center;
-  align-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 0; }
   @media screen and (min-width: 768px) {
     /* line 103, ui/_header.sass */
@@ -1074,32 +1075,38 @@ label[role="menu-toggle"] i {
       -webkit-align-content: stretch;
       -ms-flex-line-pack: stretch;
       align-content: stretch;
-      width: 100vw; } }
+      width: 100vw;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
 
-/* line 125, ui/_header.sass */
+/* line 126, ui/_header.sass */
 .nav__list {
   font-size: 2rem; }
   @media screen and (min-width: 0px) and (max-width: 768px) {
-    /* line 125, ui/_header.sass */
+    /* line 126, ui/_header.sass */
     .nav__list {
       padding: 1.5rem 0rem 3rem 4rem;
       height: 6rem;
+      width: 100%;
       border-bottom-style: solid;
       border-bottom-width: 1px; }
-      /* line 137, ui/_header.sass */
+      /* line 139, ui/_header.sass */
       .nav__list a {
         border: none !important;
         padding: none !important; } }
-  /* line 141, ui/_header.sass */
+  /* line 143, ui/_header.sass */
   .nav__list a {
     border-left-width: 0.1rem;
     border-left-style: solid;
     padding-left: 1.9vw; }
-  /* line 152, ui/_header.sass */
+  /* line 154, ui/_header.sass */
   .nav__list:first-child a {
     border: none; }
 
-/* line 155, ui/_header.sass */
+/* line 157, ui/_header.sass */
 .header__social {
   display: none;
   position: absolute; }
@@ -2079,4 +2086,4 @@ body {
     #wp-admin-bar-site-name a:after:after {
       content: "cinemaish"; } }
 
-/*# sourceMappingURL=src.map */
+/*# sourceMappingURL=style-prefixed.css.map */
