--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -34,6 +34,7 @@
 @import "ui/merch"
 @import "ui/merch--details"
 @import "ui/merch--search"
+@import "ui/onLoad"
 
 //PLUGINS
 @import "plugins/traffic-light"
