--- a/resources/style-compiled.css
+++ b/resources/style-compiled.css
@@ -202,6 +202,7 @@ figure {
 /* line 341, /Users/user/Dropbox/Web/clients/gatorworks/opticalshoppe/bower_components/normalize-scss/_normalize.scss */
 hr {
   -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
   box-sizing: content-box;
   height: 0; }
 
@@ -320,6 +321,8 @@ input {
 /* line 476, /Users/user/Dropbox/Web/clients/gatorworks/opticalshoppe/bower_components/normalize-scss/_normalize.scss */
 input[type="checkbox"],
 input[type="radio"] {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -915,6 +918,7 @@ a {
 /* line 4, ui/_site-wide.sass */
 .site-logo, .header__logo, .info__logo {
   background: url("img/site-logo.svg") center no-repeat;
+  -webkit-background-size: contain;
   background-size: contain; }
 
 @media screen and (min-width: 768px) {
@@ -956,9 +960,7 @@ a {
       width: 9rem;
       height: 9rem;
       -webkit-transform: translateY(1.5rem);
-      -moz-transform: translateY(1.5rem);
       -ms-transform: translateY(1.5rem);
-      -o-transform: translateY(1.5rem);
       transform: translateY(1.5rem);
       margin: 0; } }
   @media screen and (min-width: 900px) {
@@ -967,9 +969,7 @@ a {
       width: 15rem;
       height: 15rem;
       -webkit-transform: translateY(2.5rem);
-      -moz-transform: translateY(2.5rem);
       -ms-transform: translateY(2.5rem);
-      -o-transform: translateY(2.5rem);
       transform: translateY(2.5rem); } }
 
 /* line 46, ui/_header.sass */
@@ -1043,47 +1043,70 @@ label[role="menu-toggle"] i {
 
 /* line 103, ui/_header.sass */
 .nav__menu {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   margin: 0;
+  -webkit-flex-flow: column wrap;
+  -ms-flex-flow: column wrap;
   flex-flow: column wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
   justify-content: space-between;
-  align-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 0; }
   @media screen and (min-width: 768px) {
     /* line 103, ui/_header.sass */
     .nav__menu {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
       flex-direction: row; } }
   @media screen and (min-width: 0px) and (max-width: 768px) {
     /* line 103, ui/_header.sass */
     .nav__menu {
       padding-top: 3rem;
+      -webkit-align-content: stretch;
+      -ms-flex-line-pack: stretch;
       align-content: stretch;
-      width: 100vw; } }
+      width: 100vw;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
 
-/* line 125, ui/_header.sass */
+/* line 126, ui/_header.sass */
 .nav__list {
   font-size: 2rem; }
   @media screen and (min-width: 0px) and (max-width: 768px) {
-    /* line 125, ui/_header.sass */
+    /* line 126, ui/_header.sass */
     .nav__list {
       padding: 1.5rem 0rem 3rem 4rem;
       height: 6rem;
+      width: 100%;
       border-bottom-style: solid;
       border-bottom-width: 1px; }
-      /* line 137, ui/_header.sass */
+      /* line 139, ui/_header.sass */
       .nav__list a {
         border: none !important;
         padding: none !important; } }
-  /* line 141, ui/_header.sass */
+  /* line 143, ui/_header.sass */
   .nav__list a {
     border-left-width: 0.1rem;
     border-left-style: solid;
     padding-left: 1.9vw; }
-  /* line 152, ui/_header.sass */
+  /* line 154, ui/_header.sass */
   .nav__list:first-child a {
     border: none; }
 
-/* line 155, ui/_header.sass */
+/* line 157, ui/_header.sass */
 .header__social {
   display: none;
   position: absolute; }
@@ -1149,7 +1172,7 @@ label[role="menu-toggle"] i {
   .footer__menu, .footer__services {
     border-left-width: 1px;
     border-left-style: solid;
-    padding-left: 1.6rem; } }
+    padding-left: 0.5rem; } }
 
 @media screen and (min-width: 768px) {
   /* line 57, ui/_footer.sass */
@@ -1171,12 +1194,22 @@ label[role="menu-toggle"] i {
       float: left;
       display: block;
       margin-right: 2.35765%;
+      width: 31.76157%; }
+      /* line 40, neat/grid/_span-columns.scss */
+      .footer__hours-box:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 900px) {
+    /* line 63, ui/_footer.sass */
+    .footer__hours-box {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
       width: 23.23176%; }
       /* line 40, neat/grid/_span-columns.scss */
       .footer__hours-box:last-child {
         margin-right: 0; } }
 
-/* line 71, ui/_footer.sass */
+/* line 73, ui/_footer.sass */
 .footer__location-box {
   float: left;
   display: block;
@@ -1186,7 +1219,7 @@ label[role="menu-toggle"] i {
   .footer__location-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 71, ui/_footer.sass */
+    /* line 73, ui/_footer.sass */
     .footer__location-box {
       float: left;
       display: block;
@@ -1196,7 +1229,7 @@ label[role="menu-toggle"] i {
       .footer__location-box:last-child {
         margin-right: 0; } }
 
-/* line 80, ui/_footer.sass */
+/* line 82, ui/_footer.sass */
 .footer__info-box {
   float: left;
   display: block;
@@ -1206,7 +1239,17 @@ label[role="menu-toggle"] i {
   .footer__info-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 80, ui/_footer.sass */
+    /* line 82, ui/_footer.sass */
+    .footer__info-box {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 23.23176%; }
+      /* line 40, neat/grid/_span-columns.scss */
+      .footer__info-box:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 900px) {
+    /* line 82, ui/_footer.sass */
     .footer__info-box {
       float: left;
       display: block;
@@ -1216,15 +1259,15 @@ label[role="menu-toggle"] i {
       .footer__info-box:last-child {
         margin-right: 0; } }
 
-/* line 86, ui/_footer.sass */
+/* line 90, ui/_footer.sass */
 .footer__info ul {
   padding: 0; }
 
-/* line 93, ui/_footer.sass */
+/* line 97, ui/_footer.sass */
 .legal__item {
   display: block; }
 
-/* line 96, ui/_footer.sass */
+/* line 100, ui/_footer.sass */
 .info__social-box {
   *zoom: 1;
   display: block; }
@@ -1236,7 +1279,7 @@ label[role="menu-toggle"] i {
   .info__social-box:after {
     clear: both; }
 
-/* line 99, ui/_footer.sass */
+/* line 103, ui/_footer.sass */
 .info__social {
   float: left;
   display: block;
@@ -1246,7 +1289,17 @@ label[role="menu-toggle"] i {
   .info__social:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 99, ui/_footer.sass */
+    /* line 103, ui/_footer.sass */
+    .info__social {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 100%; }
+      /* line 40, neat/grid/_span-columns.scss */
+      .info__social:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 900px) {
+    /* line 103, ui/_footer.sass */
     .info__social {
       float: left;
       display: block;
@@ -1255,11 +1308,12 @@ label[role="menu-toggle"] i {
       /* line 40, neat/grid/_span-columns.scss */
       .info__social:last-child {
         margin-right: 0; } }
-  /* line 104, ui/_footer.sass */
-  .info__social ul {
-    padding-right: 0.5rem; }
+  @media screen and (min-width: 900px) {
+    /* line 110, ui/_footer.sass */
+    .info__social ul {
+      padding-right: 0.5rem; } }
 
-/* line 121, ui/_footer.sass */
+/* line 129, ui/_footer.sass */
 .info__logo-box {
   float: left;
   display: block;
@@ -1269,17 +1323,17 @@ label[role="menu-toggle"] i {
   .info__logo-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 121, ui/_footer.sass */
+    /* line 129, ui/_footer.sass */
     .info__logo-box {
       float: left;
       display: block;
       margin-right: 2.35765%;
-      width: 14.70196%; }
+      width: 100%; }
       /* line 40, neat/grid/_span-columns.scss */
       .info__logo-box:last-child {
         margin-right: 0; } }
-  @media screen and (min-width: 768px) {
-    /* line 121, ui/_footer.sass */
+  @media screen and (min-width: 900px) {
+    /* line 129, ui/_footer.sass */
     .info__logo-box {
       float: left;
       display: block;
@@ -1289,17 +1343,22 @@ label[role="menu-toggle"] i {
       .info__logo-box:last-child {
         margin-right: 0; } }
 
-/* line 128, ui/_footer.sass */
+/* line 136, ui/_footer.sass */
 .info__logo {
   height: 8.8rem;
   width: 8.8rem;
   margin: 0 auto; }
   @media screen and (min-width: 768px) {
-    /* line 128, ui/_footer.sass */
+    /* line 136, ui/_footer.sass */
     .info__logo {
       height: 5.5rem;
       width: 5.5rem;
-      display: inline-block; } }
+      display: inline-block;
+      float: right; } }
+  @media screen and (min-width: 900px) {
+    /* line 136, ui/_footer.sass */
+    .info__logo {
+      float: left; } }
 
 /* line 7, ui/_aside.sass */
 .moreinfo__promo, .moreinfo__tour {
@@ -1927,6 +1986,21 @@ label[role="menu-toggle"] i {
 .mSearch__filter-list .selected li {
   border-color: rgba(0, 0, 0, 0.2); }
 
+/* line 1, ui/_onLoad.sass */
+body {
+  -webkit-transition: opacity 1s ease-in 0s;
+  transition: opacity 1s ease-in 0s;
+  opacity: 0; }
+  /* line 4, ui/_onLoad.sass */
+  body.isNotHome {
+    opacity: 1; }
+
+/* line 8, ui/_onLoad.sass */
+.onLoad body {
+  -webkit-transition: opacity 1s ease-in 0s;
+  transition: opacity 1s ease-in 0s;
+  opacity: 1; }
+
 /* line 11, plugins/traffic-light.scss */
 .traffic-light {
   position: fixed;
@@ -1948,6 +2022,7 @@ label[role="menu-toggle"] i {
     font-size: .6rem;
     font-family: "Helvetica Neue", "Helvetica", sans-serif;
     text-transform: uppercase;
+    -webkit-box-shadow: 0px 1px 0px #8c8c8c, 0px 2px 0px #8c8c8c, 0px 3px 0px #8c8c8c, 0px 4px 0px #8c8c8c, 0px 5px 0px #8c8c8c;
     box-shadow: 0px 1px 0px #8c8c8c, 0px 2px 0px #8c8c8c, 0px 3px 0px #8c8c8c, 0px 4px 0px #8c8c8c, 0px 5px 0px #8c8c8c; }
     @media only screen and (min-width: 0rem) {
       /* line 15, plugins/traffic-light.scss */
@@ -2011,8 +2086,7 @@ label[role="menu-toggle"] i {
     #wp-admin-bar-site-name a:after:after {
       content: "cinemaish"; } }
 
-/*# sourceMappingURL=style.css.map */
-
+/*# sourceMappingURL=style-prefixed.css.map */
 /* 
  * 	Core Owl Carousel CSS File
  *	v1.3.2
