--- a/craft/templates/partials/_social-footer.html
+++ b/craft/templates/partials/_social-footer.html
@@ -1,18 +1,10 @@
 <ul class="block__social">
-  <li class="social__item fa-stack fa-lg">
-    <i class="fa fa-stack-2x fa-stop is__text--c-gray-dark"></i>
-    <i class="fa fa-stack-1x fa-facebook is__text--c-white"></i>
-  </li>
-  <li class="social__item fa-stack fa-lg">
-    <i class="fa fa-stack-2x fa-stop is__text--c-gray-light"></i>
-    <i class="fa fa-stack-1x fa-twitter is__text--c-white"></i>
-  </li>
-  <li class="social__item fa-stack fa-lg">
-    <i class="fa fa-stack-2x fa-stop is__text--c-gray"></i>
-    <i class="fa fa-stack-1x fa-pinterest is__text--c-white"></i>
-  </li>
-  <li class="social__item fa-stack fa-lg">
-    <i class="fa fa-stack-2x fa-stop is__text--c-gray-darkest"></i>
-    <i class="fa fa-stack-1x fa-instagram is__text--c-white"></i>
-  </li>
+  {% for each in companySocialLinks.socialList %}
+    <a href="{{each.socialLink}}">
+      <li class="social__item fa-stack fa-lg">
+        <i class="fa fa-stack-2x fa-stop is__text--c-gray"></i>
+        <i class="fa fa-stack-1x fa-{{each.socialName|lower}} is__text--c-white"></i>
+      </li>
+    </a>
+  {% endfor %}
 </ul>
