--- a/resources/sass/ui/_header.sass
+++ b/resources/sass/ui/_header.sass
@@ -154,6 +154,9 @@ label[role="menu-toggle"]
     a
       border: none
 
+  &:last-child
+    box-shadow: 0 1rem 0.5rem rgba(0,0,0,.5)
+
 .header__social
   display: none
   position: absolute
