--- a/resources/sass/ui/_merch.sass
+++ b/resources/sass/ui/_merch.sass
@@ -36,6 +36,10 @@
   //positioned because
   //:before pesudo = absolute
   position: relative
+  height: 11.2rem
+  background: white
+  padding: 1.6rem
+  margin-bottom: 1.2rem
 
   &:before,
   &:after
