added gallery component && updated header logo box height

--- a/craft/templates/partials/_header.html
+++ b/craft/templates/partials/_header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="header__block">
     <div class="header__logo-box">
-      <div class="header__logo" role="site logo"></div>
+      <a href="{{siteUrl}}"><div class="header__logo" role="site logo"></div></a>
     </div>
     <div class="header__nav-box">
       <input id="header__toggle" type="checkbox"></input>
