--- a/resources/style-compiled.css
+++ b/resources/style-compiled.css
@@ -1,3 +1,154 @@
+/* 
+ * 	Core Owl Carousel CSS File
+ *	v1.3.2
+ */
+
+/* clearfix */
+.owl-carousel .owl-wrapper:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+/* display none until init */
+.owl-carousel{
+	display: none;
+	position: relative;
+	width: 100%;
+	-ms-touch-action: pan-y;
+}
+.owl-carousel .owl-wrapper{
+	display: none;
+	position: relative;
+	-webkit-transform: translate3d(0px, 0px, 0px);
+}
+.owl-carousel .owl-wrapper-outer{
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+}
+.owl-carousel .owl-wrapper-outer.autoHeight{
+	-webkit-transition: height 500ms ease-in-out;
+	-moz-transition: height 500ms ease-in-out;
+	-ms-transition: height 500ms ease-in-out;
+	-o-transition: height 500ms ease-in-out;
+	transition: height 500ms ease-in-out;
+}
+	
+.owl-carousel .owl-item{
+	float: left;
+}
+.owl-controls .owl-page,
+.owl-controls .owl-buttons div{
+	cursor: pointer;
+}
+.owl-controls {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+/* mouse grab icon */
+.grabbing { 
+    cursor:url(grabbing.png) 8 8, move;
+}
+
+/* fix */
+.owl-carousel  .owl-wrapper,
+.owl-carousel  .owl-item{
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility:    hidden;
+	-ms-backface-visibility:     hidden;
+  -webkit-transform: translate3d(0,0,0);
+  -moz-transform: translate3d(0,0,0);
+  -ms-transform: translate3d(0,0,0);
+}
+
+
+/*
+* 	Owl Carousel Owl Demo Theme 
+*	v1.3.2
+*/
+
+.owl-theme .owl-controls{
+	margin-top: 10px;
+	text-align: center;
+}
+
+/* Styling Next and Prev buttons */
+
+.owl-theme .owl-controls .owl-buttons div{
+	color: #FFF;
+	display: inline-block;
+	zoom: 1;
+	*display: inline;/*IE7 life-saver */
+	margin: 5px;
+	padding: 3px 10px;
+	font-size: 12px;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	border-radius: 30px;
+	background: #869791;
+	filter: Alpha(Opacity=50);/*IE7 fix*/
+	opacity: 0.5;
+}
+/* Clickable class fix problem with hover on touch devices */
+/* Use it for non-touch hover action */
+.owl-theme .owl-controls.clickable .owl-buttons div:hover{
+	filter: Alpha(Opacity=100);/*IE7 fix*/
+	opacity: 1;
+	text-decoration: none;
+}
+
+/* Styling Pagination*/
+
+.owl-theme .owl-controls .owl-page{
+	display: inline-block;
+	zoom: 1;
+	*display: inline;/*IE7 life-saver */
+}
+.owl-theme .owl-controls .owl-page span{
+	display: block;
+	width: 12px;
+	height: 12px;
+	margin: 5px 7px;
+	filter: Alpha(Opacity=50);/*IE7 fix*/
+	opacity: 0.5;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	border-radius: 20px;
+	background: #869791;
+}
+
+.owl-theme .owl-controls .owl-page.active span,
+.owl-theme .owl-controls.clickable .owl-page:hover span{
+	filter: Alpha(Opacity=100);/*IE7 fix*/
+	opacity: 1;
+}
+
+/* If PaginationNumbers is true */
+
+.owl-theme .owl-controls .owl-page span.owl-numbers{
+	height: auto;
+	width: auto;
+	color: #FFF;
+	padding: 2px 10px;
+	font-size: 12px;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	border-radius: 30px;
+}
+
+/* preloading images */
+.owl-item.loading{
+	min-height: 150px;
+	background: url(AjaxLoader.gif) no-repeat center center
+}
 @charset "UTF-8";
 /* ==========================================================================
    Normalize.scss settings
@@ -598,7 +749,7 @@ label[role="menu-toggle"] i {
   color: #ef4036; }
 
 /* line 9, base/is/_is__colors.sass */
-.is__background--c-red, .component__contact input[type='submit'], .component__panel, .panel--small, .tour__panel, .mDetail__panel, .main__aside .storeline__panel, .merch__panel, .panelGoods__symbol, .main__article .goods__symbol, .mSearch__filter-box {
+.is__background--c-red, .component__contact input[type='submit'], .component__panel, .panel--small, .tour__panel, .mDetail__panel, .main__aside .storeline__panel, .merch__panel, .panelGoods__symbol, .main__article .goods__symbol, .mSearch__filter-box, .block__frontgallery .owl-controls .owl-page.active span {
   background: #ef4036; }
 
 /* line 12, base/is/_is__colors.sass */
@@ -935,7 +1086,9 @@ a {
   float: left;
   display: block;
   margin-right: 4.82916%;
-  width: 30.11389%; }
+  width: 30.11389%;
+  position: relative;
+  z-index: 5; }
   /* line 40, neat/grid/_span-columns.scss */
   .header__logo-box:last-child {
     margin-right: 0; }
@@ -945,17 +1098,18 @@ a {
       float: left;
       display: block;
       margin-right: 2.35765%;
-      width: 31.76157%; }
+      width: 31.76157%;
+      height: 7.5rem; }
       /* line 40, neat/grid/_span-columns.scss */
       .header__logo-box:last-child {
         margin-right: 0; } }
 
-/* line 27, ui/_header.sass */
+/* line 31, ui/_header.sass */
 .header__logo {
   width: 6rem;
   height: 6rem; }
   @media screen and (min-width: 768px) {
-    /* line 27, ui/_header.sass */
+    /* line 31, ui/_header.sass */
     .header__logo {
       width: 9rem;
       height: 9rem;
@@ -964,7 +1118,7 @@ a {
       transform: translateY(1.5rem);
       margin: 0; } }
   @media screen and (min-width: 900px) {
-    /* line 27, ui/_header.sass */
+    /* line 31, ui/_header.sass */
     .header__logo {
       width: 15rem;
       height: 15rem;
@@ -972,7 +1126,7 @@ a {
       -ms-transform: translateY(2.5rem);
       transform: translateY(2.5rem); } }
 
-/* line 46, ui/_header.sass */
+/* line 50, ui/_header.sass */
 .header__nav-box {
   float: left;
   display: block;
@@ -983,7 +1137,7 @@ a {
   .header__nav-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 46, ui/_header.sass */
+    /* line 50, ui/_header.sass */
     .header__nav-box {
       float: left;
       display: block;
@@ -993,7 +1147,7 @@ a {
       .header__nav-box:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 900px) {
-    /* line 46, ui/_header.sass */
+    /* line 50, ui/_header.sass */
     .header__nav-box {
       float: left;
       display: block;
@@ -1004,44 +1158,44 @@ a {
       .header__nav-box:last-child {
         margin-right: 0; } }
 
-/* line 58, ui/_header.sass */
+/* line 62, ui/_header.sass */
 #header__toggle {
   display: none; }
 
 @media screen and (min-width: 768px) {
-  /* line 62, ui/_header.sass */
+  /* line 66, ui/_header.sass */
   label[role="menu-toggle"] {
     display: none; } }
-/* line 68, ui/_header.sass */
+/* line 72, ui/_header.sass */
 label[role="menu-toggle"] i {
   padding: 0.8rem 1rem;
   border-width: 0.2rem;
   border-style: solid; }
 
-/* line 81, ui/_header.sass */
+/* line 85, ui/_header.sass */
 .nav__box {
   display: none; }
   @media screen and (min-width: 0px) and (max-width: 767px) {
-    /* line 81, ui/_header.sass */
+    /* line 85, ui/_header.sass */
     .nav__box {
       position: absolute;
       left: 0;
       top: 7rem;
       z-index: 999; } }
   @media screen and (min-width: 768px) {
-    /* line 81, ui/_header.sass */
+    /* line 85, ui/_header.sass */
     .nav__box {
       display: block; } }
 
-/* line 95, ui/_header.sass */
+/* line 99, ui/_header.sass */
 #header__toggle:checked ~ nav[role="menu"] {
   display: block; }
 
-/* line 98, ui/_header.sass */
+/* line 102, ui/_header.sass */
 #header__toggle:checked + label i {
   border-color: transparent; }
 
-/* line 103, ui/_header.sass */
+/* line 107, ui/_header.sass */
 .nav__menu {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1061,7 +1215,7 @@ label[role="menu-toggle"] i {
   align-items: center;
   padding: 0; }
   @media screen and (min-width: 768px) {
-    /* line 103, ui/_header.sass */
+    /* line 107, ui/_header.sass */
     .nav__menu {
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
@@ -1069,7 +1223,7 @@ label[role="menu-toggle"] i {
       -ms-flex-direction: row;
       flex-direction: row; } }
   @media screen and (min-width: 0px) and (max-width: 767px) {
-    /* line 103, ui/_header.sass */
+    /* line 107, ui/_header.sass */
     .nav__menu {
       padding-top: 3rem;
       -webkit-align-content: stretch;
@@ -1082,35 +1236,35 @@ label[role="menu-toggle"] i {
       -ms-flex-direction: column;
       flex-direction: column; } }
 
-/* line 126, ui/_header.sass */
+/* line 130, ui/_header.sass */
 .nav__list {
   font-size: 2rem; }
   @media screen and (min-width: 0px) and (max-width: 767px) {
-    /* line 126, ui/_header.sass */
+    /* line 130, ui/_header.sass */
     .nav__list {
       padding: 1.5rem 0rem 3rem 4rem;
       height: 6rem;
       width: 100%;
       border-bottom-style: solid;
       border-bottom-width: 1px; }
-      /* line 139, ui/_header.sass */
+      /* line 143, ui/_header.sass */
       .nav__list a {
         border: none !important;
         padding: none !important; }
-      /* line 143, ui/_header.sass */
+      /* line 147, ui/_header.sass */
       .nav__list:last-child {
         -webkit-box-shadow: 0 1rem 0.5rem rgba(0, 0, 0, 0.5);
         box-shadow: 0 1rem 0.5rem rgba(0, 0, 0, 0.5); } }
-  /* line 146, ui/_header.sass */
+  /* line 150, ui/_header.sass */
   .nav__list a {
     border-left-width: 0.1rem;
     border-left-style: solid;
     padding-left: 1.9vw; }
-  /* line 157, ui/_header.sass */
+  /* line 161, ui/_header.sass */
   .nav__list:first-child a {
     border: none; }
 
-/* line 160, ui/_header.sass */
+/* line 164, ui/_header.sass */
 .header__social {
   display: none;
   position: absolute; }
@@ -2009,6 +2163,34 @@ body {
   transition: opacity 1s ease-in 0s;
   opacity: 1; }
 
+/* line 2, ui/_front-gallery.sass */
+.fgallery__box {
+  width: 100%;
+  height: 40vh; }
+  @media screen and (min-width: 500px) {
+    /* line 2, ui/_front-gallery.sass */
+    .fgallery__box {
+      height: 45vh; } }
+  @media screen and (min-width: 768px) {
+    /* line 2, ui/_front-gallery.sass */
+    .fgallery__box {
+      height: 60vh;
+      max-height: 45.5rem; } }
+
+/* line 12, ui/_front-gallery.sass */
+.block__frontgallery .owl-controls {
+  position: absolute;
+  bottom: 1rem;
+  right: 1.4rem; }
+  /* line 18, ui/_front-gallery.sass */
+  .block__frontgallery .owl-controls .owl-page span {
+    width: 15px;
+    height: 15px;
+    background: transparent;
+    border: #c7c7c7 0.3rem solid !important;
+    -webkit-box-shadow: 0 0.2rem 0.5rem 0rem rgba(0, 0, 0, 0.5) !important;
+    box-shadow: 0 0.2rem 0.5rem 0rem rgba(0, 0, 0, 0.5) !important; }
+
 /* line 11, plugins/traffic-light.scss */
 .traffic-light {
   position: fixed;
@@ -2095,154 +2277,3 @@ body {
       content: "cinemaish"; } }
 
 /*# sourceMappingURL=style-prefixed.css.map */
-/* 
- * 	Core Owl Carousel CSS File
- *	v1.3.2
- */
-
-/* clearfix */
-.owl-carousel .owl-wrapper:after {
-	content: ".";
-	display: block;
-	clear: both;
-	visibility: hidden;
-	line-height: 0;
-	height: 0;
-}
-/* display none until init */
-.owl-carousel{
-	display: none;
-	position: relative;
-	width: 100%;
-	-ms-touch-action: pan-y;
-}
-.owl-carousel .owl-wrapper{
-	display: none;
-	position: relative;
-	-webkit-transform: translate3d(0px, 0px, 0px);
-}
-.owl-carousel .owl-wrapper-outer{
-	overflow: hidden;
-	position: relative;
-	width: 100%;
-}
-.owl-carousel .owl-wrapper-outer.autoHeight{
-	-webkit-transition: height 500ms ease-in-out;
-	-moz-transition: height 500ms ease-in-out;
-	-ms-transition: height 500ms ease-in-out;
-	-o-transition: height 500ms ease-in-out;
-	transition: height 500ms ease-in-out;
-}
-	
-.owl-carousel .owl-item{
-	float: left;
-}
-.owl-controls .owl-page,
-.owl-controls .owl-buttons div{
-	cursor: pointer;
-}
-.owl-controls {
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-/* mouse grab icon */
-.grabbing { 
-    cursor:url(grabbing.png) 8 8, move;
-}
-
-/* fix */
-.owl-carousel  .owl-wrapper,
-.owl-carousel  .owl-item{
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility:    hidden;
-	-ms-backface-visibility:     hidden;
-  -webkit-transform: translate3d(0,0,0);
-  -moz-transform: translate3d(0,0,0);
-  -ms-transform: translate3d(0,0,0);
-}
-
-
-/*
-* 	Owl Carousel Owl Demo Theme 
-*	v1.3.2
-*/
-
-.owl-theme .owl-controls{
-	margin-top: 10px;
-	text-align: center;
-}
-
-/* Styling Next and Prev buttons */
-
-.owl-theme .owl-controls .owl-buttons div{
-	color: #FFF;
-	display: inline-block;
-	zoom: 1;
-	*display: inline;/*IE7 life-saver */
-	margin: 5px;
-	padding: 3px 10px;
-	font-size: 12px;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	border-radius: 30px;
-	background: #869791;
-	filter: Alpha(Opacity=50);/*IE7 fix*/
-	opacity: 0.5;
-}
-/* Clickable class fix problem with hover on touch devices */
-/* Use it for non-touch hover action */
-.owl-theme .owl-controls.clickable .owl-buttons div:hover{
-	filter: Alpha(Opacity=100);/*IE7 fix*/
-	opacity: 1;
-	text-decoration: none;
-}
-
-/* Styling Pagination*/
-
-.owl-theme .owl-controls .owl-page{
-	display: inline-block;
-	zoom: 1;
-	*display: inline;/*IE7 life-saver */
-}
-.owl-theme .owl-controls .owl-page span{
-	display: block;
-	width: 12px;
-	height: 12px;
-	margin: 5px 7px;
-	filter: Alpha(Opacity=50);/*IE7 fix*/
-	opacity: 0.5;
-	-webkit-border-radius: 20px;
-	-moz-border-radius: 20px;
-	border-radius: 20px;
-	background: #869791;
-}
-
-.owl-theme .owl-controls .owl-page.active span,
-.owl-theme .owl-controls.clickable .owl-page:hover span{
-	filter: Alpha(Opacity=100);/*IE7 fix*/
-	opacity: 1;
-}
-
-/* If PaginationNumbers is true */
-
-.owl-theme .owl-controls .owl-page span.owl-numbers{
-	height: auto;
-	width: auto;
-	color: #FFF;
-	padding: 2px 10px;
-	font-size: 12px;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	border-radius: 30px;
-}
-
-/* preloading images */
-.owl-item.loading{
-	min-height: 150px;
-	background: url(AjaxLoader.gif) no-repeat center center
-}
