--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -36,6 +36,7 @@
 @import "ui/merch--search"
 @import "ui/onLoad"
 @import "ui/front-gallery"
+@import "ui/home"
 
 //PLUGINS
 @import "plugins/traffic-light"
