--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -35,6 +35,8 @@
 @import "ui/merch--details"
 @import "ui/merch--search"
 @import "ui/onLoad"
+@import "ui/front-gallery"
+@import "ui/home"
 
 //PLUGINS
 @import "plugins/traffic-light"
