--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -18,17 +18,19 @@
     </div>
       {% for panel in entry.homePanels %}
         <aside class="home__aside {{panel.backgroundColor}}">
-          {% if panel.imageOnTop %}
-            <img class="aside__image" src="{{ panel.image[0].url }}" alt="">
-            <h2 class="aside__heading">{{ panel.heading }}</h2>
-          {% else %}
-            <h2 class="aside__heading">{{ panel.heading }}</h2>
-            <img class="aside__image" src="{{ panel.image[0].url }}" alt="">
-          {% endif %}
-          <p class="aside__caption">{{panel.caption}}</p>
-          <a class="aside__button" href="{{panel.buttonUrl[0].url}}">
-              {{panel.button}}
-          </a>
+          <div class="aside__box">
+            {% if panel.imageOnTop %}
+              <img class="aside__image" src="{{ panel.image[0].url }}" alt="">
+              <h2 class="aside__heading">{{ panel.heading }}</h2>
+            {% else %}
+              <h2 class="aside__heading">{{ panel.heading }}</h2>
+              <img class="aside__image" src="{{ panel.image[0].url }}" alt="">
+            {% endif %}
+            <p class="aside__caption">{{panel.caption}}</p>
+            <a class="aside__button" href="{{panel.buttonUrl[0].url}}">
+                {{panel.button}}
+            </a>
+          </div>
         </aside>
       {% endfor %}
   </div>
