--- a/resources/style-compiled.css
+++ b/resources/style-compiled.css
@@ -684,7 +684,7 @@ label[role="menu-toggle"] i {
   font-style: italic; }
 
 /* line 23, base/is/_is__text.sass */
-.is__text--centered, blockquote, caption, .panelGoods__symbol, .main__article .goods__symbol, .panelGoods__caption, .main__article .goods__caption, .about__image-box, .merchitem__image:hover:before {
+.is__text--centered, blockquote, caption, .panelGoods__symbol, .main__article .goods__symbol, .panelGoods__caption, .main__article .goods__caption, .about__image-box, .merchitem__image:hover:before, .home__aside .aside__box {
   text-align: center; }
 
 /* line 26, base/is/_is__text.sass */
@@ -2191,16 +2191,21 @@ body {
     -webkit-box-shadow: 0 0.2rem 0.5rem 0rem rgba(0, 0, 0, 0.5) !important;
     box-shadow: 0 0.2rem 0.5rem 0rem rgba(0, 0, 0, 0.5) !important; }
 
+@media screen and (min-width: 0px) and (max-width: 767px) {
+  /* line 3, ui/_home.sass */
+  .home__box {
+    padding: 0; } }
+
 @media screen and (min-width: 768px) {
-  /* line 5, ui/_home.sass */
+  /* line 8, ui/_home.sass */
   .home__body, .home__aside {
     height: 40rem; } }
 @media screen and (min-width: 900px) {
-  /* line 5, ui/_home.sass */
+  /* line 8, ui/_home.sass */
   .home__body, .home__aside {
     height: 30rem; } }
 
-/* line 11, ui/_home.sass */
+/* line 14, ui/_home.sass */
 .home__body-box {
   float: left;
   display: block;
@@ -2210,7 +2215,7 @@ body {
   .home__body-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 11, ui/_home.sass */
+    /* line 14, ui/_home.sass */
     .home__body-box {
       float: left;
       display: block;
@@ -2220,34 +2225,24 @@ body {
       .home__body-box:last-child {
         margin-right: 0; } }
 
-/* line 18, ui/_home.sass */
+/* line 21, ui/_home.sass */
 .home__body .body__title {
   margin-top: 0rem; }
 
-/* line 23, ui/_home.sass */
+/* line 26, ui/_home.sass */
 .home__aside {
   float: left;
   display: block;
   margin-right: 4.82916%;
-  width: 65.05695%;
-  margin-left: 17.47153%;
-  position: relative; }
+  width: 100%;
+  position: relative;
+  *zoom: 1;
+  display: block; }
   /* line 40, neat/grid/_span-columns.scss */
   .home__aside:last-child {
     margin-right: 0; }
-  @media screen and (min-width: 500px) {
-    /* line 23, ui/_home.sass */
-    .home__aside {
-      float: left;
-      display: block;
-      margin-right: 4.82916%;
-      width: 47.58542%;
-      margin-left: 34.94305%; }
-      /* line 40, neat/grid/_span-columns.scss */
-      .home__aside:last-child {
-        margin-right: 0; } }
   @media screen and (min-width: 768px) {
-    /* line 23, ui/_home.sass */
+    /* line 26, ui/_home.sass */
     .home__aside {
       float: left;
       display: block;
@@ -2258,20 +2253,61 @@ body {
       .home__aside:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 0px) and (max-width: 767px) {
-    /* line 23, ui/_home.sass */
+    /* line 26, ui/_home.sass */
     .home__aside {
       padding-bottom: 5.2rem; } }
+  /* line 17, bourbon/addons/_clearfix.scss */
+  .home__aside:before, .home__aside:after {
+    content: " ";
+    display: table; }
+  /* line 23, bourbon/addons/_clearfix.scss */
+  .home__aside:after {
+    clear: both; }
   /* line 40, ui/_home.sass */
+  .home__aside .aside__box {
+    float: left;
+    display: block;
+    margin-right: 4.82916%;
+    width: 65.05695%;
+    margin-left: 17.47153%; }
+    /* line 40, neat/grid/_span-columns.scss */
+    .home__aside .aside__box:last-child {
+      margin-right: 0; }
+    @media screen and (min-width: 500px) {
+      /* line 40, ui/_home.sass */
+      .home__aside .aside__box {
+        float: left;
+        display: block;
+        margin-right: 4.82916%;
+        width: 65.05695%;
+        text-align: left;
+        padding: 2rem 0 0 0; }
+        /* line 40, neat/grid/_span-columns.scss */
+        .home__aside .aside__box:last-child {
+          margin-right: 0; } }
+    @media screen and (min-width: 768px) {
+      /* line 40, ui/_home.sass */
+      .home__aside .aside__box {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 100%;
+        margin-left: 0%;
+        padding: inherit; }
+        /* line 40, neat/grid/_span-columns.scss */
+        .home__aside .aside__box:last-child {
+          margin-right: 0; } }
+  /* line 52, ui/_home.sass */
   .home__aside .aside__image {
-    width: 100%; }
-  /* line 43, ui/_home.sass */
+    max-width: 100%; }
+  /* line 55, ui/_home.sass */
   .home__aside .aside__heading {
     font-size: 1.8rem; }
-  /* line 46, ui/_home.sass */
+  /* line 58, ui/_home.sass */
   .home__aside .aside__caption {
     margin: 0;
     line-height: 1.41em; }
-  /* line 52, ui/_home.sass */
+  /* line 64, ui/_home.sass */
   .home__aside .aside__button {
     padding: 0.4rem 1rem;
     position: absolute;
